# newrelic-telemetry-sdk-c

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  attributes_8c-example.html  configuration_8c-example.html  customdoxygen.css  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  files.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  index.html  log_8c-example.html  menudata.js  newrelic-telemetry-sdk_8h.html  newrelic-telemetry-sdk_8h_source.html  simple_8c-example.html  span_8c-example.html  trace_api_8c-example.html
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
_doxygen/: Doxyfile  README.md  footer.html  header.html  image_resize.css
docs/: attributes_8c-example.html  configuration_8c-example.html  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  files.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  index.html  log_8c-example.html  newrelic-telemetry-sdk_8h.html  newrelic-telemetry-sdk_8h_source.html  qtify.css  simple_8c-example.html  span_8c-example.html  trace_api_8c-example.html
docs/search/: enums_0.js  files_0.js  typedefs_0.js
examples/: attributes.c  configuration.c  destroy_attributes.c  log.c  simple.c  span.c  trace_api.c  valgrind-suppressions
include/: newrelic-telemetry-sdk.h
search/: all_0.js  enums_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js
src/: lib.rs
tools/: update-api-documentation.bash
