[package]
name = "newrelic-telemetry-sdk-c"
version = "0.1.0"
authors = ["New Relic <opensource@newrelic.com>"]
edition = "2018"

[lib]
name = "newrelic_telemetry_sdk_c"
crate-type = ["staticlib", "cdylib"]

[dependencies]
newrelic-telemetry = { path = "vendor/newrelic-telemetry-sdk-rust", features = ["blocking"] }
log = "0.4.11"
simplelog = "0.10.1"
